<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bag">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BMI"
        android:textSize="30sp"
        android:textColor="@color/pink"
        android:gravity="center"
        android:fontFamily="cursive"
        android:padding="20dp"
        android:layout_margin="8dp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/length"
        android:layout_margin="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_shape"
            android:padding="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="25"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_shape"
            android:padding="20dp"
            android:shadowColor="@color/black"
            android:shadowRadius="25"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingStart="49dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/yellow"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/yellow">

        </View>

        <View
            android:id="@+id/green"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/green">

        </View>

        <View
            android:id="@+id/blue"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/blue">

        </View>

        <View
            android:id="@+id/orange"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/orange1">

        </View>

        <View
            android:id="@+id/orange2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/orange2">

        </View>

        <View
            android:id="@+id/red"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/red">

        </View>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631">

        <ImageView
            android:id="@+id/imageView1"
            android:paddingEnd="30dp"
            android:layout_marginStart="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />


        <ImageView
            android:id="@+id/imageView2"


            android:visibility="gone"
            android:paddingEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:paddingEnd="30dp"
            android:visibility="gone"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />

        <ImageView
            android:id="@+id/imageView4"
            android:paddingEnd="30dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />

        <ImageView
            android:id="@+id/imageView5"
            android:paddingEnd="20dp"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />

        <ImageView
            android:id="@+id/imageView6"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
    </LinearLayout>


</LinearLayout>